Bug 406537 - Encrypted file cannot be saved as unencrypted
Summary: Encrypted file cannot be saved as unencrypted
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: file (other bugs)
Version First Reported In: 5.0.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-14 17:33 UTC by Thomas Baumgart
Modified: 2019-04-14 17:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2019-04-14 17:33:41 UTC
SUMMARY
If a file is stored encrypted and later saved as unencrypted, the encryption returns if the file is saved again.

STEPS TO REPRODUCE
1. Open encrypted file
2. "Save as" under different name w/o an encryption key
3. Restart application
4. Open unencrypted file (if it is not opened as last file used)
5. Make a modification
6. Save file

OBSERVED RESULT
File is encrypted again

EXPECTED RESULT
File is not encrypted
Comment 1 Thomas Baumgart 2019-04-14 17:36:54 UTC
Git commit a366b51e40a6f7a4d9d1b06b07e677892313c60e by Thomas Baumgart.
Committed on 14/04/2019 at 17:36.
Pushed by tbaumgart into branch '5.0'.

Do not re-encrypt file

This change allows to remove encryption permanently.
FIXED-IN: 5.0.4

M  +9    -0    kmymoney/plugins/xml/xmlstorage.cpp

https://commits.kde.org/kmymoney/a366b51e40a6f7a4d9d1b06b07e677892313c60e