Do not re-encrypt file

This change allows to remove encryption permanently.

BUG: 406537
FIXED-IN: 5.0.4